--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node app.js",
-    "test": "jest --watch"
+    "test": "jest --watch --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
